@@ -143,7 +143,7 @@ var lmsQueue = Vue.component("lms-queue", {
 <lms-resizer v-if="!pinQueue" varname="pq-unpinned-width"></lms-resizer>
  <div class="subtoolbar noselect" v-bind:class="{'list-details':pinQueue}" v-if="!desktopLayout || showQueue">
   <v-layout v-if="selection.size>0">
-   <v-btn v-if="desktopLayout" :title="pinQueue ? trans.unpin : trans.pin" flat icon class="toolbar-button" @click="togglePin" id="pq-pin-1"><img :src="(pinQueue ? 'pin' : 'unpin') | svgIcon(darkUi)"></img></v-btn>
+   <v-btn v-if="desktopLayout && windowWide" :title="pinQueue ? trans.unpin : trans.pin" flat icon class="toolbar-button" @click="togglePin" id="pq-pin-1"><img :src="(pinQueue ? 'pin' : 'unpin') | svgIcon(darkUi)"></img></v-btn>
    <div class="toolbar-nobtn-pad"></div>
    <div v-if="desktopLayout && pinQueue" style="width:2px"></div>
    <v-layout row wrap>
@@ -158,7 +158,7 @@ var lmsQueue = Vue.component("lms-queue", {
    <v-btn :title="trans.cancel" flat icon class="toolbar-button" @click="clearSelection()"><v-icon>cancel</v-icon></v-btn>
   </v-layout>
   <v-layout v-else>
-   <v-btn v-if="desktopLayout" :title="pinQueue ? trans.unpin : trans.pin" flat icon class="toolbar-button" @click="togglePin" id="pq-pin-2"><img :src="(pinQueue ? 'pin' : 'unpin') | svgIcon(darkUi)"></img></v-btn>
+   <v-btn v-if="desktopLayout && windowWide" :title="pinQueue ? trans.unpin : trans.pin" flat icon class="toolbar-button" @click="togglePin" id="pq-pin-2"><img :src="(pinQueue ? 'pin' : 'unpin') | svgIcon(darkUi)"></img></v-btn>
    <div class="toolbar-nobtn-pad"></div>
    <div v-if="desktopLayout && pinQueue" style="width:2px"></div>
    <v-layout row wrap v-longpress="durationClicked" class="link-item">
@@ -290,7 +290,8 @@ var lmsQueue = Vue.component("lms-queue", {
             coverUrl: undefined,
             queueCustomActions: [],
             nowPlayingExpanded: false,
-            nowPlayingWide:0
+            nowPlayingWide:0,
+            windowWide:true
         }
     },
     computed: {
@@ -313,7 +314,7 @@ var lmsQueue = Vue.component("lms-queue", {
             return this.$store.state.showQueue
         },
         pinQueue() {
-            return this.$store.state.pinQueue
+            return this.$store.state.pinQueue && this.windowWide
         },
         noPlayer() {
             return !this.$store.state.player
@@ -619,6 +620,7 @@ var lmsQueue = Vue.component("lms-queue", {
             if (wide!=this.wide) {
                 this.wide = wide;
             }
+            this.windowWide = window.innerWidth>=670;
         },
         handleScroll() {
             this.menu.show = false;
@@ -644,7 +646,7 @@ var lmsQueue = Vue.component("lms-queue", {
             msHandleScrollEvent(this);
         },
         clickListener(e) {
-            if (!this.$store.state.desktopLayout || this.$store.state.pinQueue || !this.$store.state.showQueue || resizerActive ||
+            if (!this.$store.state.desktopLayout || (this.$store.state.pinQueue && this.windowWide) || !this.$store.state.showQueue || resizerActive ||
                 (this.$store.state.openDialogs.length>0 && ('info-dialog'!=this.$store.state.openDialogs[0] || this.$store.state.openDialogs.length>1))) {
                 return;
             }
@@ -744,7 +746,7 @@ var lmsQueue = Vue.component("lms-queue", {
                 if (undefined!=choice) {
                     if (0==choice.id) {
                         bus.$emit('playerCommand', ["playlist", "clear"]);
-                        if (!this.$store.state.pinQueue) {
+                        if (!(this.$store.state.pinQueue && this.windowWide)) {
                             this.$store.commit('setShowQueue', false);
                         }
                     } else {
